# AttendanceManagement

./: .gitignore
attendance_app/: main.py  pyproject.toml
attendance_app/app/: __init__.py  config.py
attendance_app/app/services/: excel_service.py  input_service.py  record_service.py  summary_service.py
attendance_app/app/templates/: input.html  records.html  summary.html
attendance_app/app/views/: input.py  records.py  summary.py
